--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "meow": "^9.0.0"
+    "meow": "^9.0.0",
+    "puppeteer": "^10.2.0",
+    "storycrawler": "^3.1.0"
   }
 }
