--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/nagashimam/sb-vnu#readme",
   "devDependencies": {
     "@types/mkdirp": "^1.0.2",
+    "@types/vnu-jar": "^17.11.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.3"
   },
@@ -35,6 +36,7 @@
     "meow": "^9.0.0",
     "mkdirp": "^1.0.4",
     "puppeteer": "^10.2.0",
-    "storycrawler": "^3.1.0"
+    "storycrawler": "^3.1.0",
+    "vnu-jar": "^21.9.2"
   }
 }
