--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "meow": "^9.0.0",
     "mkdirp": "^1.0.4",
     "puppeteer": "^10.2.0",
+    "sass": "^1.41.1",
     "storycrawler": "^3.1.0",
     "vnu-jar": "^21.9.2"
   }
